# Astronik-81

./: README.md
code_python/: package.xml  setup.py
code_python/code_python/: cam_pub.py  cam_sub.py  kontrol.py
cpp_test/: CMakeLists.txt  package.xml
cpp_test/src/: ilk_deneme.cpp  pub_den_cpp_00.cpp  sub_den_cpp_00.cpp  sub_den_cpp_01.cpp  template_node.cpp
demo/: demo.pro  demo.pro.user.1199c60.4.8-pre1
demo/src/: Page1Form.ui.qml
py_test/: package.xml  setup.py
py_test/py_test/: ilk_deneme.py  pub_den_py_00.py  sub_den_py_00.py  sub_den_py_01.py  template_node.py
ydlidar_ros2/params/: ydlidar.yaml
